Correct the margin to avoid redundant spacing

--- a/app/src/popup/MainPopup.css
+++ b/app/src/popup/MainPopup.css
@@ -57,7 +57,8 @@ form {
 
 .session-search-entry-matchCase-selected {
   font-weight: 600;
-  margin: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   color: lightblue;
   overflow: hidden;
   user-select: none;
@@ -66,7 +67,8 @@ form {
 
 .session-search-entry-matchCase-unselected {
   font-weight: 600;
-  margin: 10px;
+  margin-bottom: 15px;
+  margin-top: 15px;
   color: grey;
   overflow: hidden;
   user-select: none;
